
	* lisp/sawfish/cfg/widgets/match-window.jl: justify the `grab' button to the left
	                                            justify the labels to the left

	* KEYBINDINGS: explained macros (artist formerly known as `nested keybindings')
	               added Multikey (aka Compose)
		       better explaination of ISO_Level3_Shift

	* po/make-pot: removed --update (intltool + rep = puke)

2009-09-23  Christopher Bratusek <zanghar@freenet.de>
	* man/news.texi: news items for 1.6.0 are partially rewritten [Teika Kazura]

	* lisp/sawfish/wm/ext/fdo-menu.jl: small fix in the exile function [Matthew Love]

	* lisp/sawfish/ui/widgets/frame-style.jl: also support tar.lzma and tar.xz here
	                                          make cursor invisible in the textview
						  set wrap-mode to word-char

	* lisp/sawfish/ui/shell.jl: changed wm class of sawfish-ui from "main" "Nokogiri"
	                            to "sawfish-configurator" "Sawfish-Configurator"

	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/ext/match-window: rename "Matched Windows" group to "Window Rules" in UI

2009-09-22  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/viewport.jl: string-change

	* OPTIONS: updated
	           fixed typos
		   removed old GNOME stuff

2009-09-21  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/util/prompt.jl: temporary solution of previous work [Jeremy Hankins]

2009-09-20  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/fdo-menu.jl: use define instead of defun
	                                   changed name of a few variables
					   make it more error tolerant regarding bad .desktop files
					   make it work if any lang-setting variable is unset
					   -- [Matthew Love]

	* man/faq.texi: updated

	* lisp/sawfish/gtk/widget-text.jl: mark as broken

	* themes/Crux/theme.jl: make default text-color of inactive frames black
	                        for better readability

	* man/sawfish.1
	* man/sawfish-client.1