@@ -79,6 +79,8 @@ Shrink-yank functions and @code{send-to-workspace}.
 
 @item Added FDO (freedesktop.org) application-menu-implementation [Matthew Love]
 
+@item Added a way to change the font-color via SawfishConfig independently of what theme is beeing used [Matthew Love, Christopher Bratusek]
+
 @item Sawfish does now support theme-tarballs compressed with XZ (aka LZMA2) or LZMA [Christopher Bratusek]
 
 @item 3 new sawfish-mmc based commands (@code{maximize-unframe}, @code{maximize-reframe} and @code{rename-window}) [Christopher Bratusek]
