@@ -33,6 +33,10 @@
 
 	* po/make-pot: removed --update (intltool + rep = puke)
 
+	* lisp/sawfish/wm/ext/frames.jl: added customization options for changing font-color
+	                                 *independently* of what frame-style is beeing used
+					 -- [Matthew Love, Christopher Bratusek]
+
 2009-09-23  Christopher Bratusek <zanghar@freenet.de>
 	* man/news.texi: news items for 1.6.0 are partially rewritten [Teika Kazura]
 
